--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "cbb98da4-f26e-4fae-80be-23e1155c5fb3"
 authors = ["Alain Chau <phchau@ucsd.edu>"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RegionTrees = "dee08c22-ab7f-5625-9660-a9af2021b33f"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
 [compat]
 julia = "1"
 
